Add open api ts type extractor
